--- a/index.html
+++ b/index.html
@@ -8,21 +8,59 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
 
-    <title>Bootstrap Demo</title>
+    <title>Lab1</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>still trying to find my way around working from home</p>
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <!-- Brand -->
+      <a class="navbar-brand" href="#">Coca Cola journey</a>
+    
+      <!-- Links -->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+    
+        <!-- Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Drinks</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Coca cola</a>
+            <a class="dropdown-item" href="#">Sprite</a>
+            <a class="dropdown-item" href="#">Dr Pepper</a>
+          </div>
+        </li>
+      </ul>
+    </nav>
+    <br>
+
+    <div class="container">
+    <h1>Hello, world!</h1>
+    <p>I'm using a .container class</p>
+    <div class="row">
+      <div class="col-sm-12" style="background-color: crimson;">.col-sm-12</div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-4" style="background-color: beige;">.col-sm-4 COCACOLA</div>
+      <div class="col-sm-4" style="background-color: azure;">.col-sm-4 SPRITE</div>
+      <div class="col-sm-4" style="background-color: antiquewhite;">.col-sm-4 DR PEPPER</div>
+    </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
     -->
+
+    <!-- Option 2: Separate Local Jquery Popper and Bootstrap JS -->
+    <script src="js/jquery.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
