--- a/index.html
+++ b/index.html
@@ -50,16 +50,66 @@
     </div>
     </nav>
   <br>
-
+<!--Main body-->
     <div class="container">
-    <div class="row">
-      <div class="col-sm-12" style="background-color: crimson;">.col-sm-12 bg image here</div>
+    <div class="row"><!--Main 3d image-->
+      <div class="col-sm-12">
+        <div id="main_3d_image">
+          <div id="main_text" class="col-xs-12 col-sm-4">
+            <h2>Coca Cola Great Britain</h2>
+            <h3>Founded by Dr John S Pemberton</h3>
+        <p>The Coca Cola Company is the world's leading manufacturer, marketer and distributor of non-alcoholic beverage concentrates and syrups, and produces nearly 400 brands.</p>
+          </div> 
+        </div>
+      </div>
     </div>
-
+<!--row of cards on the grid-->
     <div class="row">
-      <div class="col-sm-4" style="background-color: beige;">.col-sm-4 COCACOLA</div>
-      <div class="col-sm-4" style="background-color: azure;">.col-sm-4 SPRITE</div>
-      <div class="col-sm-4" style="background-color: antiquewhite;">.col-sm-4 DR PEPPER</div>
+      <!--Coca cola-->
+      <div class="col-sm-4">
+        <div class="card">
+          <a href="#">
+            <img class="card-img-top img-fluid img-thumbnail" src="assets/images/coca_cola.jpg" alt="Coca cola">
+          </a>
+          <div class="card-body">
+            <h3 class="card-title">Coca Cola</h3>
+            <p class="card-text">It was 1886, in New York Harbour.John Pemberton, an Atlanta pharmacist,
+               was inspired by simple curiosity. One afternoon, he stirred up a fragrant, caramel-coloured liquid and, when it was done, he carried it a few doors down to Jacobs' Pharmacy. Here, the mixture was combined with carbonated water and sampled by customers who all agreed this new drink was special.
+              </p>
+            <a href="#" class="btn btn-primary">Find out more</a>
+          </div>
+        </div>
+      </div>
+      <!--Sprite-->
+      <div class="col-sm-4">
+        <div class="card">
+          <a href="#">
+            <img class="card-img-top img-fluid img-thumbnail" src="assets/images/sprite.jpg" alt="Sprite">
+          </a>
+          <div class="card-body">
+            <h3 class="card-title">Sprite</h3>
+            <p class="card-text">First introduced in 1961, crisp, refreshing, clean-tasting Sprite is now the world's leading lemon and lime flavoured soft drink and is sold in more than 190 different countries.
+              Sprite Zero, part of our no sugar Zero range, offers the delicious lemon lime taste of Sprite without the sugar or calories. 
+              </p>
+            <a href="#" class="btn btn-primary">Find out more</a>
+          </div>
+        </div>
+      </div>
+      <!--Dr Pepper-->
+      <div class="col-sm-4">
+        <div class="card">
+          <a href="#">
+            <img class="card-img-top img-fluid img-thumbnail" src="assets/images/dr_pepper.jpg" alt="Dr Pepper">
+          </a>
+          <div class="card-body">
+            <h3 class="card-title">Dr Pepper</h3>
+            <p class="card-text">Dr Pepper's unique, sparkling blend of 23 fruit flavours has been around for well over a century.
+              It was created by Texas pharmacist Charles Alderton in 1885. He gave a sample of the first ever batch to Wade Morrison, a local shop owner, who instantly agreed to stock the drink. The distinctive, bold taste of Dr Pepper has been popular ever since.
+              </p>
+            <a href="#" class="btn btn-primary">Find out more</a>
+          </div>
+        </div>
+      </div>
     </div>
     </div>
     <br><!--Temporary break-->
