--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <!-- Brand -->
       <div class="logo">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <h1>1</h1>
         <h1>oca</h1>
         <h2>Cola</h2>
