--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,12 +12,17 @@
     <script src="https://kit.fontawesome.com/f2fa64bd3c.js" crossorigin="anonymous"></script>
     <!--Custom CSS-->
     <link rel="stylesheet" href="css/custom.css">
-    <title>Main page</title>
+    <!--X3DOM-->
+    <link rel="stylesheet" type="text/css" href="css/x3dom.css">
+
+    <title>Home</title>
+
   </head>
-  <body>
+
+  <body id="bodyColor">
 <!-- Logo and Navigation bar -->
-    <nav class="navbar sticky-top navbar-expand-sm navbar_coca_cola">
-    <div class="container">
+    <nav id="headerColor" class="navbar sticky-top navbar-expand-sm navbar_coca_cola">
+    <div class="container-fluid">
       <!-- Brand -->
       <div class="logo">
         <a class="navbar-brand" href="index.html">
@@ -29,7 +35,7 @@
         </div>
             
       <!--Collapsible Navbar Menu icon-->
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-expanded="false">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-expanded="false">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -39,7 +45,7 @@
       <!-- Links -->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" data-toggle="popover" data-trigger="hover" data-placement="bottom" title="About Web 3D Applications"
@@ -50,9 +56,9 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" aria-expanded="false">Drinks</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="coke.html">Coca cola</a>
-            <a class="dropdown-item" href="sprite.html">Sprite</a>
-            <a class="dropdown-item" href="pepper.html">Dr Pepper</a>
+            <a class="dropdown-item" href="javascript:swap('coke')">Coca cola</a>
+            <a class="dropdown-item" href="javascript:swap('sprite')">Sprite</a>
+            <a class="dropdown-item" href="javascript:swap('pepper')">Dr Pepper</a>
           </div>
         </li>
         <li class="nav-item">
@@ -62,8 +68,10 @@
     </div>
     </div>
     </nav>
-<!--Main contents-->
-    <div class="container main_contents">
+
+    <div class="container-fluid main_contents">
+      <!--Home page block element-->
+      <div id="home">
     <div class="row"><!--Main 3d image-->
       <div class="col-sm-12">
         <div id="main_3d_image">
@@ -75,12 +83,13 @@
         </div>
       </div>
     </div>
+
 <!--row of cards on the grid-->
     <div class="row">
-      <!--Coca cola-->
+      <!--Coca cola column-->
       <div class="col-sm-4">
         <div class="card">
-          <a href="http://www.coca-cola.co.uk/drinks/coca-cola/coca-cola">
+          <a href="javascript:swap('coke')">
             <img class="card-img-top img-fluid img-thumbnail" src="assets/images/coca_cola.jpg" alt="Coca cola">
           </a>
           <div class="card-body">
@@ -92,10 +101,11 @@
           </div>
         </div>
       </div>
-      <!--Sprite-->
+
+      <!--Sprite column-->
       <div class="col-sm-4">
         <div class="card">
-          <a href="http://www.coca-cola.co.uk/drinks/sprite/sprite">
+          <a href="javascript:swap('sprite')">
             <img class="card-img-top img-fluid img-thumbnail" src="assets/images/sprite.jpg" alt="Sprite">
           </a>
           <div class="card-body">
@@ -107,10 +117,11 @@
           </div>
         </div>
       </div>
-      <!--Dr Pepper-->
+
+      <!--Dr Pepper column-->
       <div class="col-sm-4">
         <div class="card">
-          <a href="http://www.coca-cola.co.uk/drinks/dr-pepper/dr-pepper">
+          <a href="javascript:swap('pepper')">
             <img class="card-img-top img-fluid img-thumbnail" src="assets/images/dr_pepper.jpg" alt="Dr Pepper">
           </a>
           <div class="card-body">
@@ -125,11 +136,253 @@
     </div>
     </div>
 
+    <!--Coke page block element-->
+    <div id="coke" style="display: none;">
+      <!-- Row to hold two cards to hold 1) the X3D model and 2) the gallery -->
+      <div class="row">
+        <!-- Column to hold the X3D Model -->
+        <div class="col-sm-9">
+          <div class="card text-left">
+            <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="javascript:swap('coke')">Coke</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:swap('sprite')">Sprite</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:swap('pepper')">Pepper</a>
+                    </li>
+                </ul>
+            </div>
+
+<!--Bootstrap 4 card body to hold info about the X3D model-->
+<div class="card-body">
+  <h4 class="card-title">Coca cola X3D model</h4>
+
+        <!--X3D code here-->
+        <div class="model3D">
+          <x3d>
+            <scene>
+              <inline url="assets/x3d/cokecan.x3d"></inline>
+            </scene>
+          </x3d>
+        </div>
+        <p class="card-text">This X3D model has been created in Blender, exported directly to x3d.</p>
+        <h5 class="card-subtitle">Camera Views</h5>
+        <div class="camera-btns">
+          <p class="card-text">These buttons select a range of X3D model viewpoints</p>
+          <div class="btn-group">
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Front</a>
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Back</a>
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Top</a>
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Bottom</a>
+            <a href="#" class="btn btn-outline-dark disabled btn-responsive camera-font">Off</a>
+          </div>  
+        </div>
+    </div>
+        </div>
+      </div>
+       <!-- Column to hold 3D Image gallery --> 
+       <div class="col-sm-3">
+        <div class="card text-left">
+            <div class="card-header gallery-header">
+                Gallery
+            </div>
+            <div class="card-body">
+                <h4 class="card-title">3D Image Gallery</h4>
+                <!-- Dynamically generated image gallery using JS and PHP -->
+                <div class="gallery" id="gallery_coke"></div>
+                <p class="card-text">These 3D images of the Coke can, Sprite bottle and Dr Pepper cup are rendered in Blender 3.4.1 with EEve</p>
+            </div>
+        </div>
+      </div>
+  </div> 
+
+   <!-- Row to hold 1 card to hold the coca cola descriptive text, etc. -->
+   <div class="row">
+    <!-- Coca Cola Column -->
+    <div class="col-sm-12">
+      <div class="card">
+        <div class="card-body">
+            <h3 class="card-title">Coca Cola</h3>
+            <p class="card-text">Atlanta Beginnings: It was 1886, and in New York Harbour, workers were constructing the Statue of Liberty. Eight hundred miles away, another great American symbol was about to be unveiled.
+              Like many people who change history, John Pemberton, an Atlanta pharmacist, was inspired by simple curiosity. One afternoon, he stirred up a fragrant, caramel-coloured liquid and, when it was done, he carried it a few doors down to Jacobs' Pharmacy. Here, the mixture was combined with carbonated water and sampled by customers who all agreed - this new drink was something special. So Jacobs' Pharmacy put it on sale for five cents (about 3p) a glass.</p>    
+            <a href="http://www.coca-cola.co.uk/drinks/coca-cola/coca-cola" class="btn btn-primary">Find out more ...</a>   
+        </div>
+      </div>
+    </div> 
+  </div> 
+</div> <!-- End coke page -->
+
+<!-- Sprite page block element -->
+<div id="sprite" style="display: none;">
+  <!-- Row to hold two cards to hold 1) the X3D model and 2) the gallery -->
+  <div class="row">
+    <!-- Column to hold the X3D Model -->
+    <div class="col-sm-9">
+      <div class="card text-left">
+        <div class="card-header">
+            <ul class="nav nav-tabs card-header-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" href="javascript:swap('coke')">Coke</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:swap('sprite')">Sprite</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:swap('pepper')">Pepper</a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Bootstrap 4 card body to hold information about the X3D model-->
+        <div class="card-body">
+            <h4 class="card-title">Sprite X3D Model</h4>
+
+ <!--X3D code here-->
+ <div class="model3D">
+  <x3d>
+    <scene>
+      <inline url="assets/x3d/spritebottle.x3d"></inline>
+    </scene>
+  </x3d>
+</div>
+<p class="card-text">This X3D model has been created in Blender, exported directly to x3d.</p>
+<h5 class="card-subtitle">Camera Views</h5>
+<div class="camera-btns">
+  <p class="card-text">These buttons select a range of X3D model viewpoints</p>
+  <div class="btn-group">
+    <a href="#" class="btn btn-primary btn-responsive camera-font">Front</a>
+    <a href="#" class="btn btn-primary btn-responsive camera-font">Back</a>
+    <a href="#" class="btn btn-primary btn-responsive camera-font">Top</a>
+    <a href="#" class="btn btn-primary btn-responsive camera-font">Bottom</a>
+    <a href="#" class="btn btn-outline-dark disabled btn-responsive camera-font">Off</a>
+  </div>  
+</div>
+</div>
+</div>
+</div>
+
+<!-- Column to hold 3D Image gallery --> 
+     <div class="col-sm-3">
+      <div class="card text-left">
+          <div class="card-header gallery-header">
+              Gallery
+          </div>
+          <div class="card-body">
+              <h4 class="card-title">3D Image Gallery</h4>
+              <!-- Dynamically generated image gallery using JS and PHP -->
+              <div class="gallery" id="gallery_sprite"></div>
+              <p class="card-text">These 3D images of the Coke can, Sprite bottle and Dr Pepper cup are rendered in Blender 3.4.1 with EEve</p>
+          </div>
+      </div>
+    </div>
+</div>
+
+       <!-- Row to hold 1 card to hold the Sprite descriptive text, etc. -->
+       <div class="row">
+        <!-- Sprite Column -->
+        <div class="col-sm-12">
+          <div class="card">
+            <div class="card-body">
+                <h3 class="card-title">Sprite</h3>
+                <p class="card-text">First introduced in 1961, crisp, refreshing, clean-tasting Sprite is now the world's leading lemon and lime flavoured soft drink and is sold in more than 190 different countries.
+                    Sprite Zero, part of our no sugar Zero range, offers the delicious lemon lime taste of Sprite without the sugar or calories. </p>    
+                <a href="http://www.coca-cola.co.uk/drinks/sprite/sprite" class="btn btn-primary">Find out more ...</a>   
+            </div>
+          </div>
+        </div> 
+      </div> 
+  </div> <!-- End Sprite page -->
+
+ <!-- Pepper page block element -->
+ <div id="pepper" style="display: none;">
+  <!-- Row to hold two cards to hold 1) the X3D model and 2) the gallery -->
+  <div class="row">
+    <!-- Column to hold the X3D Model -->
+    <div class="col-sm-9">
+      <div class="card text-left">
+        <div class="card-header">
+            <ul class="nav nav-tabs card-header-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" href="javascript:swap('coke')">Coke</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:swap('sprite')">Sprite</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:swap('pepper')">Pepper</a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Bootstrap 4 card body to hold information about the X3D model-->
+        <div class="card-body">
+            <h4 class="card-title">Dr Pepper X3D Model</h4>
+
+             <!--X3D code here-->
+        <div class="model3D">
+          <x3d>
+            <scene>
+              <inline url="assets/x3d/drpeppercup.x3d"></inline>
+            </scene>
+          </x3d>
+        </div>
+        <p class="card-text">This X3D model has been created in Blender, exported directly to x3d.</p>
+        <h5 class="card-subtitle">Camera Views</h5>
+        <div class="camera-btns">
+          <p class="card-text">These buttons select a range of X3D model viewpoints</p>
+          <div class="btn-group">
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Front</a>
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Back</a>
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Top</a>
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Bottom</a>
+            <a href="#" class="btn btn-outline-dark disabled btn-responsive camera-font">Off</a>
+          </div>  
+        </div>
+    </div>
+        </div>
+      </div>
+       <!-- Column to hold 3D Image gallery --> 
+       <div class="col-sm-3">
+        <div class="card text-left">
+            <div class="card-header gallery-header">
+                Gallery
+            </div>
+            <div class="card-body">
+                <h4 class="card-title">3D Image Gallery</h4>
+                <!-- Dynamically generated image gallery using JS and PHP -->
+                <div class="gallery" id="gallery_pepper"></div>
+                <p class="card-text">These 3D images of the Coke can, Sprite bottle and Dr Pepper cup are rendered in Blender 3.4.1 with EEve</p>
+            </div>
+        </div>
+      </div>
+  </div> 
+   <!--Row to hold 1 card to hold the dr pepper text-->
+   <div class="row">
+    <!--Dr Pepper column-->
+    <div class="col-sm-12">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Dr Pepper</h3>
+          <p class="card-text">Dr Pepper's unique, sparkling blend of 23 fruit flavours has been around for well over a century and it's still the same, with that distinctive flavour you just can't quite put your tongue on.
+            It was created by Texas pharmacist Charles Alderton in 1885. He gave a sample of the first ever batch to Wade Morrison, a local shop owner, and Mr Morrison instantly agreed to stock the drink. The distinctive, bold taste of Dr Pepper has been popular ever since.                
+            </p>
+            <a href="http://www.coca-cola.co.uk/drinks/dr-pepper/dr-pepper" class="btn btn-primary">Find out more...</a>
+        </div>
+      </div>
+    </div>
+  </div>
+ </div> <!--End Pepper page-->
+</div>    
+
     <!--Footer-->
-    <nav class="navbar navbar-expand-sm footer">
-      <div class="container">   
+    <nav id="footerColor" class="navbar navbar-expand-sm footer">
+      <div class="container-fluid">   
           <div class="navbar-text float-left copyright">
-              <p><span class="align-baseline"></span>&copy Mobile Web 3D Applications </span></p>
+              <p><span class="align-baseline">&copy 2023 Mobile Web 3D Applications | <a href="javascript:changeLook()">Restyle</a> | <a href="javascript:changeBack()">Reset</a></span></p>
           </div>
           <div class="navbar-text social">
                 <a href="https://github.com/MertBolkan"><i class="fab fa-github-square fa-2x fa-pull-right"></i></a>
@@ -161,21 +414,29 @@
             <!-- Modal footer -->
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-            </div>           
+            </div>      
+
             </div>
         </div>
     </div>
 
-    <!-- Optional JavaScript -->
-
     <!-- Option 2: Separate Local Jquery Popper and Bootstrap JS -->
-    <script src="js/jquery.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="scripts/js/jquery.js"></script>
+    <script src="scripts/js/popper.min.js"></script>
+    <script src="scripts/js/bootstrap.js"></script>
+
+    <!--X3dom javascript-->
+    <script src="scripts/js/x3dom.js"></script>
 
       <!-- Custom JavaScript code for my 3d App -->
     <!-- intialise popovers-->
-    <script src="js/custom.js" crossorigin="anonymous"></script>
-    
+    <script src="scripts/js/custom.js" crossorigin="anonymous"></script>
+
+    <!--Javascript to swap for SPA and restyle-->
+    <script src="scripts/js/swap_restyle.js"></script>
+
+    <!--Javascript and PHP based Gallery generator-->
+    <script src="scripts/js/gallery_generator.js"></script>
+
   </body>
 </html>
