--- a/pepper.html
+++ b/pepper.html
@@ -105,9 +105,9 @@
           <p class="card-text">These buttons select a range of X3D model viewpoints</p>
           <div class="btn-group">
             <a href="#" class="btn btn-primary btn-responsive camera-font">Front</a>
-            <a href="#" class="btn btn-secondary btn-responsive camera-font">Back</a>
-            <a href="#" class="btn btn-success btn-responsive camera-font">Top</a>
-            <a href="#" class="btn btn-light btn-responsive camera-font">Bottom</a>
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Back</a>
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Top</a>
+            <a href="#" class="btn btn-primary btn-responsive camera-font">Bottom</a>
             <a href="#" class="btn btn-outline-dark disabled btn-responsive camera-font">Off</a>
           </div>  
         </div>
@@ -178,14 +178,13 @@
     -->
 
     <!-- Option 2: Separate Local Jquery Popper and Bootstrap JS -->
-    <script src="js/jquery.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-
+    <script src="scripts/js/jquery.js"></script>
+    <script src="scripts/js/popper.min.js"></script>
+    <script src="scripts/js/bootstrap.js"></script>
     <!--x3dom JavaScript-->
-    <script type="text/javascript" src="js/x3dom.js"></script>
+    <script type="text/javascript" src="scripts/js/x3dom.js"></script>
 
     <!--Popover-->
-    <script src="js/custom.js" crossorigin="anonymous"></script>
+    <script src="scripts/js/custom.js" crossorigin="anonymous"></script>
   </body>
 </html>
