--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
             <a href="#" class="btn btn-outline-dark disabled btn-responsive camera-font">Off</a>
           </div>  
         </div>
-    </div>
-        </div>
+      </div>
+      </div>
       </div>
        <!-- Column to hold 3D Image gallery --> 
        <div class="col-sm-3">
@@ -194,7 +194,7 @@
                 <h4 class="card-title">3D Image Gallery</h4>
                 <!-- Dynamically generated image gallery using JS and PHP -->
                 <div class="gallery" id="gallery_coke"></div>
-                <p class="card-text">These 3D images of the Coke can, Sprite bottle and Dr Pepper cup are rendered in Blender 3.4.1 with EEve</p>
+                <p class="card-text">These 3D images of the Coke can, Sprite bottle and Dr Pepper cup are rendered in Blender 3.4.1 with EEvee</p>
             </div>
         </div>
       </div>
@@ -342,7 +342,7 @@
             <a href="#" class="btn btn-outline-dark disabled btn-responsive camera-font">Off</a>
           </div>  
         </div>
-    </div>
+        </div>
         </div>
       </div>
        <!-- Column to hold 3D Image gallery --> 
