--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       <div class="col-sm-12">
         <div id="main_3d_image">
           <div id="main_text" class="col-xs-12 col-sm-4">
-            <h2>Coca Cola Great Britain</h2>
-            <h3>Founded by Dr John S Pemberton</h3>
-        <p>The Coca Cola Company is the world's leading manufacturer, marketer and distributor of non-alcoholic beverage concentrates and syrups, and produces nearly 400 brands.</p>
+          <div id="title_home"></div>
+          <div id="subTitle_home"></div>
+          <div id="description_home"></div>
           </div> 
         </div>
       </div>
@@ -435,8 +435,11 @@
     <!--Javascript to swap for SPA and restyle-->
     <script src="scripts/js/swap_restyle.js"></script>
 
-    <!--Javascript and PHP based Gallery generator-->
+    <!--JavaScript and PHP based Gallery generator-->
     <script src="scripts/js/gallery_generator.js"></script>
+
+    <!--JavaScript model interactions-->
+<script src="js/getJsonData.js"></script>
 
   </body>
 </html>
