--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="model3D">
           <x3d>
             <scene>
-              <inline nameSpaceName="model" mapDEFToID="true" onclick="animateModel();" url="assets/x3d/cokecan.x3d"></inline>
+              <inline nameSpaceName="model" mapDEFToID="true" onclick="animateModel();" url="assets/x3d/cokecan_anim.x3d"></inline>
             </scene>
           </x3d>
         </div> 
@@ -174,7 +174,7 @@
  <div class="model3D">
   <x3d id="model">
     <scene>
-      <inline nameSpaceName="model" mapDEFToID="true" onclick="animateModel();" url="assets/x3d/spritebottle.x3d"></inline>
+      <inline nameSpaceName="model" mapDEFToID="true" onclick="animateModel();" url="assets/x3d/spritebottle_anim.x3d"></inline>
     </scene>
   </x3d>
 </div>
@@ -188,7 +188,7 @@
         <div class="model3D">
           <x3d>
             <scene>
-              <inline nameSpaceName="model" mapDEFToID="true" onclick="animateModel();" url="assets/x3d/drpeppercup.x3d"></inline>
+              <inline nameSpaceName="model" mapDEFToID="true" onclick="animateModel();" url="assets/x3d/drpeppercup_anim.x3d"></inline>
             </scene>
           </x3d>
         </div>
